tekton/webhook/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: event-listener
  namespace: coffeeshop-pipelines
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: eventlistener.apps.rapiers.os.fyre.ibm.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: el-event-listener
          servicePort: 8080
